--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
- DATABASE_URL="mysql://root:21624177@127.0.0.1:3306/ecommerce?serverVersion=8.0.41&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/ecommerce?serverVersion=8.0.41&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -37,5 +37,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN=MAILER_DSN=gmail://....
 ###< symfony/mailer ###
