--- a/.env
+++ b/.env
@@ -37,5 +37,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=MAILER_DSN=gmail://....
+MAILER_DSN=gmail://echripc@gmail.com:hffwinqyyycdkoqn@default
 ###< symfony/mailer ###
