avoir des produits reccomendés dynamiques

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,13 @@ parameters:
 
 services:
 
+
+    App\Twig\AppExtension:
+        tags: [ 'twig.extension' ]
+        arguments:
+          [ '@App\Repository\ProduitRepository' ]
+
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
