avoir des categories dans side panel qui sont importés de la base de données

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,7 +12,7 @@ services:
     App\Twig\AppExtension:
         tags: [ 'twig.extension' ]
         arguments:
-          [ '@App\Repository\ProduitRepository' ]
+          [ '@App\Repository\ProduitRepository','@App\Repository\CategorieRepository' ]
 
 
     # default configuration for services in *this* file
