--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
             provider: app_user_provider
             logout:
                 path: app_logout
-                target: app_index
+                target: app_login
                 invalidate_session: true
                 # where to redirect after logout
                 # target: app_any_route
