--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -54,8 +54,8 @@ security:
         - { path: ^/register, roles: PUBLIC_ACCESS }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/logout, roles: PUBLIC_ACCESS }
+        - { path: ^/details, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/details, roles: [ROLE_ADMIN, ROLE_USER] }
         - { path: ^/, roles: PUBLIC_ACCESS, allow_if: "not is_granted('ROLE_ADMIN')" }
 
 
