--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -55,6 +55,7 @@ security:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/logout, roles: PUBLIC_ACCESS }
         - { path: ^/details, roles: PUBLIC_ACCESS }
+        - { path: ^/error, roles: PUBLIC_ACCESS }
         - { path: ^/account, roles: IS_AUTHENTICATED_REMEMBERED }
         - { path: ^/send-verification-email, roles: IS_AUTHENTICATED_REMEMBERED }
         - { path: ^/admin, roles: ROLE_ADMIN }
