--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,10 @@ services:
     region: frankfurt
     plan: starter
     healthCheckPath: /
+    buildCommand: |
+      composer install --no-dev --optimize-autoloader
+      php bin/console doctrine:migrations:migrate --no-interaction
+      php bin/console doctrine:fixtures:load --no-interaction
     envVars:
       - key: APP_ENV
         value: prod
