--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,8 @@ services:
     healthCheckPath: /index
     buildCommand: |
       composer install --no-dev --optimize-autoloader
+      php bin/console cache:clear --env=prod
+      php bin/console cache:warmup --env=prod
       php bin/console doctrine:migrations:migrate --no-interaction
       php bin/console doctrine:fixtures:load --no-interaction
     envVars:
