--- a/render.yaml
+++ b/render.yaml
@@ -7,16 +7,6 @@ services:
     region: frankfurt
     plan: starter
     healthCheckPath: /index
-    buildCommand: |
-      # Copy all project files
-      cp -R . /var/www/html/
-      cd /var/www/html
-      # Install dependencies
-      composer install --no-dev --optimize-autoloader
-      php bin/console cache:clear --env=prod
-      php bin/console cache:warmup --env=prod
-      php bin/console doctrine:migrations:migrate --no-interaction
-      php bin/console doctrine:fixtures:load --no-interaction --append
     envVars:
       - key: APP_ENV
         value: prod
@@ -29,25 +19,16 @@ services:
           name: echripc-db
           property: connectionString
       - key: MAILER_DSN
-        sync: false
+        sync: false  # or remove this line and add MAILER_DSN in dashboard
       - key: STRIPE_SECRET_KEY
-        sync: false
+        sync: false  # same here
       - key: STRIPE_PUBLISHABLE_KEY
         sync: false
       - key: MESSENGER_TRANSPORT_DSN
         value: doctrine://default?auto_setup=0
 
-  - type: pserv
+  - type: database
     name: echripc-db
-    env: docker
-    dockerImage: mysql:8.0
+    databaseName: ecommerce
+    user: root
     plan: starter
-    disk:
-      name: data
-      mountPath: /var/lib/mysql
-      sizeGB: 10
-    envVars:
-      - key: MYSQL_DATABASE
-        value: ecommerce
-      - key: MYSQL_ROOT_PASSWORD
-        generateValue: true
